--- a/ordex-app/src/app/components/products/category-modal/category-modal.component.html
+++ b/ordex-app/src/app/components/products/category-modal/category-modal.component.html
@@ -1,6 +1,6 @@
 <div class="fixed inset-0 flex justify-center items-center bg-black bg-opacity-50 z-50" *ngIf="isOpen">
   <div class="bg-white p-6 rounded-lg w-1/3 max-h-[80vh] overflow-hidden shadow-lg transition-all transform flex flex-col">
-    <h3 class="text-2xl font-semibold mb-4">Gérer les catégories</h3>
+    <h3 class="text-2xl font-semibold mb-4">Gérer les Catégories</h3>
 
     <form (ngSubmit)="onSubmit()" [formGroup]="categoryForm" class="mb-4">
       <div class="flex space-x-2">
