--- a/ordex-app/src/app/pages/home/footer/footer.component.html
+++ b/ordex-app/src/app/pages/home/footer/footer.component.html
@@ -15,7 +15,7 @@
       <h4 class="text-lg font-semibold text-gray-800 mb-4">Liens rapides</h4>
       <ul class="space-y-2">
         <li><a href="#home" class="hover:text-orange-500">Accueil</a></li>
-        <li><a href="#about" class="hover:text-orange-500">À propos</a></li>
+        <li><a href="/home/creators" class="hover:text-orange-500">À propos</a></li>
         <li><a href="#products" class="hover:text-orange-500">Produits</a></li>
         <li><a href="/login" class="hover:text-orange-500">Se connecter</a></li>
         <li><a href="/register" class="hover:text-orange-500">S'inscrire</a></li>
@@ -28,10 +28,10 @@
       <div class="flex space-x-4 text-2xl">
         <a href="https://www.facebook.com/profile.php?id=100083843084891pp" class="text-gray-600 hover:text-orange-500"><i class="fab fa-facebook-f text-blue-500"></i></a>
         <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-instagram text-pink-500"></i></a>
-        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-twitter text-sky-400"></i></a>
-        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-whatsapp text-green-500"></i></a>
-        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-youtube text-red-600"></i></a>
-        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-tiktok text-gray-700"></i></a>
+<!--        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-twitter text-sky-400"></i></a>-->
+<!--        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-whatsapp text-green-500"></i></a>-->
+<!--        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-youtube text-red-600"></i></a>-->
+<!--        <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-tiktok text-gray-700"></i></a>-->
         <a href="#" class="text-gray-600 hover:text-orange-500"><i class="fab fa-linkedin text-blue-700"></i></a>
       </div>
     </div>
