--- a/ordex-app/src/app/pages/home/main/main.component.html
+++ b/ordex-app/src/app/pages/home/main/main.component.html
@@ -9,20 +9,20 @@
 </section>
 
 <!-- About Us Section -->
-<section id="about-ordex" class="py-20 px-6 md:px-20 bg-white">
-  <div class="flex flex-col md:flex-row items-center gap-10">
-    <div class="flex-1">
-      <img src-1 src="https://altaviawatch.com/wp-content/uploads/2022/09/Bricolage-1024x683.jpeg" alt="À propos d'Ordex" class="rounded-lg shadow-lg">
-    </div>
-    <div class="flex-1">
-      <h2 class="text-4xl font-bold text-gray-800 mb-6">À propos de <span class="text-orange-500">Ordex</span></h2>
-      <p class="text-gray-600 mb-4">Ordex est conçu pour simplifier votre expérience d'achat pour la construction.
-        Des briques et du béton à la peinture murale, en passant par les fournitures électriques et les essentiels de plomberie, nous mettons tous vos matériaux de construction à portée de main — avec un service de qualité supérieure et des prix compétitifs.</p>
-      <p class="text-gray-600">Nous sommes motivés par la fiabilité, l'efficacité et une passion pour vous aider à mieux construire. Explorez Ordex et transformez vos projets de construction et de rénovation en réalité !</p>
-      <button (click)="scrollToProducts()" class="mt-4 bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600 transition">Voir nos produits</button>
-    </div>
-  </div>
-</section>
+<!--<section id="about-ordex" class="py-20 px-6 md:px-20 bg-white">-->
+<!--  <div class="flex flex-col md:flex-row items-center gap-10">-->
+<!--    <div class="flex-1">-->
+<!--      <img src="https://altaviawatch.com/wp-content/uploads/2022/09/Bricolage-1024x683.jpeg" alt="À propos d'Ordex" class="rounded-lg shadow-lg">-->
+<!--    </div>-->
+<!--    <div class="flex-1">-->
+<!--      <h2 class="text-4xl font-bold text-gray-800 mb-6">À propos de <span class="text-orange-500">Ordex</span></h2>-->
+<!--      <p class="text-gray-600 mb-4">Ordex est conçu pour simplifier votre expérience d'achat pour la construction.-->
+<!--        Des briques et du béton à la peinture murale, en passant par les fournitures électriques et les essentiels de plomberie, nous mettons tous vos matériaux de construction à portée de main — avec un service de qualité supérieure et des prix compétitifs.</p>-->
+<!--      <p class="text-gray-600">Nous sommes motivés par la fiabilité, l'efficacité et une passion pour vous aider à mieux construire. Explorez Ordex et transformez vos projets de construction et de rénovation en réalité !</p>-->
+<!--      <button (click)="scrollToProducts()" class="mt-4 bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600 transition">Voir nos produits</button>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>-->
 
 <!-- Products Section -->
 <section id="products" class="py-20 px-6 md:px-20 bg-gray-100">
@@ -39,14 +39,22 @@
       />
       <h2 class="text-lg font-semibold mb-2">{{ product.name }}</h2>
       <p class="text-gray-700 font-bold mb-4">{{ product.price }} MAD</p>
-      <button
-        (click)="addToCart(product)"
-        [ngClass]="isInCart(product.id!) ? 'bg-green-500 hover:bg-green-600 text-white' : 'bg-yellow-500 hover:bg-yellow-700 text-white'"
-        class="p-3 rounded-full flex items-center justify-center mb-2"
-      >
-        {{ isInCart(product.id!) ? 'Ajouté au panier' : 'Ajouter au panier' }}
-        <i class="fas fa-shopping-cart ml-2"></i>
-      </button>
+      <div *ngIf="product.stock > 0; else outOfStock">
+        <button
+          (click)="addToCart(product)"
+          [ngClass]="isInCart(product.id!) ? 'bg-green-500 hover:bg-green-600 text-white' : 'bg-yellow-500 hover:bg-yellow-700 text-white'"
+          class="p-3 rounded-full flex items-center justify-center mb-2"
+        >
+          {{ isInCart(product.id!) ? 'Ajouté au panier' : 'Ajouter au panier' }}
+          <i class="fas fa-shopping-cart ml-2"></i>
+        </button>
+      </div>
+      <ng-template #outOfStock>
+        <div class="bg-red-100 text-red-600 font-semibold p-2 rounded-lg flex items-center justify-center mb-2 w-full">
+          <i class="fas fa-exclamation-triangle mr-2"></i>
+          Indisponible
+        </div>
+      </ng-template>
       <button
         (click)="showProductDetails(product)"
         class="p-3 bg-blue-500 hover:bg-blue-600 text-white rounded-full flex items-center justify-center"
@@ -72,18 +80,26 @@
       />
       <p class="text-gray-600 text-sm mb-2">{{ selectedProduct.description }}</p>
       <p class="text-sm text-gray-500 mb-2">Catégorie : {{ selectedProduct.category?.name || 'N/A' }}</p>
-      <p class="text-sm text-gray-500 mb-2">
+      <p *ngIf="selectedProduct.stock > 0" class="text-sm text-gray-500 mb-2">
         Quantité en stock : <span class="text-green-600 font-bold">{{ selectedProduct.stock }}</span>
       </p>
       <p class="text-lg font-bold text-orange-500 mb-4">{{ selectedProduct.price | number : '1.2-2' }} MAD</p>
-      <button
-        (click)="addToCart(selectedProduct)"
-        [ngClass]="isInCart(selectedProduct.id!) ? 'bg-green-500 hover:bg-green-600 text-white' : 'bg-yellow-500 hover:bg-yellow-700 text-white'"
-        class="w-full p-3 rounded-lg flex items-center justify-center mb-2"
-      >
-        {{ isInCart(selectedProduct.id!) ? 'Ajouté au panier' : 'Ajouter au panier' }}
-        <i class="fas fa-shopping-cart ml-2"></i>
-      </button>
+      <div *ngIf="selectedProduct.stock > 0; else outOfStockModal">
+        <button
+          (click)="addToCart(selectedProduct)"
+          [ngClass]="isInCart(selectedProduct.id!) ? 'bg-green-500 hover:bg-green-600 text-white' : 'bg-yellow-500 hover:bg-yellow-700 text-white'"
+          class="w-full p-3 rounded-lg flex items-center justify-center mb-2"
+        >
+          {{ isInCart(selectedProduct.id!) ? 'Ajouté au panier' : 'Ajouter au panier' }}
+          <i class="fas fa-shopping-cart ml-2"></i>
+        </button>
+      </div>
+      <ng-template #outOfStockModal>
+        <div class="bg-red-100 text-red-600 font-semibold p-2 rounded-lg flex items-center justify-center mb-2 w-full">
+          <i class="fas fa-exclamation-triangle mr-2"></i>
+          Indisponible
+        </div>
+      </ng-template>
       <button
         (click)="closeProductDetails()"
         class="w-full bg-gray-500 hover:bg-gray-600 text-white p-3 rounded-lg text-sm font-semibold transition"
